# base16384

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  base14.c  base14.h  base1432.c  base1464.c  base16384.1  base16384.c  base16384.h  binary.h  bitio.c  bitio.h  file.c  wrap.c
.github/workflows/: release.yml  test.yml
32/: CMakeLists.txt  base14.c  base14.h  base1432le.c
64/: CMakeLists.txt  base14.c  base14.h  base1464le  base1464le.c  base1464le.h  base1464le.txt  base1464leo.txt
debian/: .gitignore  README  base16384.install  changelog  control  copyright  files  libbase16384-2-dev.install  libbase16384-2.symbols  libbase16384.install  watch
debian/.debhelper/base16384/: dbgsym-build-ids
debian/.debhelper/base16384/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/base16384/dbgsym-root/usr/lib/debug/.dwz/x86_64-linux-gnu/: base16384.debug
debian/.debhelper/base16384/dbgsym-root/usr/share/doc/: base16384-dbgsym
test/: CMakeLists.txt  coder_test.c  file_test.c  file_test.h  wrap_test.c
traditional_ver/: README.md  base16384.c  base16384.h  bitio.h
